examples/errors/assign-to-argument.spcasm
org 0

macro my_macro(first)
	<first> = $40
endmacro

%my_macro(5)
